海浪又更新
海浪又更新

--- a/Demo/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Demo/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -145,7 +145,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Waveli/Weapon
+ContentBrowserTab1.SelectedPaths=/Game/Waveli/AI
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
@@ -181,17 +181,11 @@ LastLevel=/Game/Waveli/Map/Classroom_V1
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Waveli/Character/BP_ALS_AnimMan_Shooter.BP_ALS_AnimMan_Shooter
-OpenAssetsAtExit=/Game/Waveli/Weapon/BP_NerfRifle.BP_NerfRifle
-OpenAssetsAtExit=/Game/Waveli/Weapon/BP_Canon_Bullet.BP_Canon_Bullet
-OpenAssetsAtExit=/Game/Waveli/Weapon/BP_NerfCanon.BP_NerfCanon
-OpenAssetsAtExit=/Game/Waveli/Weapon/BP_Rifle_Bullet.BP_Rifle_Bullet
-OpenAssetsAtExit=/Game/Waveli/Weapon/BP_Pistol_Bullet.BP_Pistol_Bullet
-OpenAssetsAtExit=/Game/AdvancedLocomotionV4/Blueprints/CharacterLogic/ALS_AnimMan_CharacterBP.ALS_AnimMan_CharacterBP
-OpenAssetsAtExit=/Game/AdvancedLocomotionV4/Blueprints/CharacterLogic/ALS_Base_CharacterBP.ALS_Base_CharacterBP
-OpenAssetsAtExit=/Game/Waveli/Weapon/BP_PickUp_HPPack.BP_PickUp_HPPack
-OpenAssetsAtExit=/Game/Waveli/Weapon/BP_BaseWeapon.BP_BaseWeapon
+OpenAssetsAtExit=/Game/Waveli/AI/BP_ALS_AnimMan_AITearcher.BP_ALS_AnimMan_AITearcher
 OpenAssetsAtExit=/Game/Waveli/Map/Classroom_V1.Classroom_V1:PersistentLevel.Classroom_V1
+OpenAssetsAtExit=/Game/Waveli/Weapon/BP_Pistol_Bullet.BP_Pistol_Bullet
+OpenAssetsAtExit=/Game/Waveli/Weapon/BP_Canon_Bullet.BP_Canon_Bullet
+SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [RootWindow]
 ScreenPosition=X=135.000 Y=96.000
@@ -1076,26 +1070,26 @@ MRUItem8=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 MRUItem9=/Game/OldClassroom/Maps/Classroom
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Waveli/Weapon/BP_Pistol_Bullet
-MRUItem1=/Game/Waveli/Weapon/BP_BaseWeapon
-MRUItem2=/Game/Waveli/Weapon/BP_PickUp_HPPack
-MRUItem3=/Game/AdvancedLocomotionV4/Blueprints/CharacterLogic/ALS_Base_CharacterBP
-MRUItem4=/Game/AdvancedLocomotionV4/Blueprints/CharacterLogic/ALS_AnimMan_CharacterBP
-MRUItem5=/Game/Waveli/Weapon/BP_Rifle_Bullet
-MRUItem6=/Game/Waveli/Weapon/BP_NerfCanon
-MRUItem7=/Game/Waveli/Weapon/BP_Canon_Bullet
-MRUItem8=/Game/Waveli/Weapon/BP_NerfRifle
-MRUItem9=/Game/Waveli/Character/BP_ALS_AnimMan_Shooter
-MRUItem10=/Game/Waveli/Map/Classroom_V1
-MRUItem11=/Game/Waveli/AI/SBT_MoveToWeapon
-MRUItem12=/Game/Waveli/AI/SBT_JumpShot
-MRUItem13=/Game/Waveli/AI/BTT_MoveToObject
-MRUItem14=/Game/Waveli/AI/SBT_MoveShot
-MRUItem15=/Game/Waveli/AI/SBT_MoveToHP
-MRUItem16=/Game/Waveli/AI/SBT_MoveToBullet
-MRUItem17=/Game/Waveli/AI/BTS_UpdateInfo
-MRUItem18=/Game/Waveli/AI/SBT_Move
-MRUItem19=/Game/ZiHui/HUD/Widget_EnemyHPBar
+MRUItem0=/Game/Waveli/AI/BP_ALS_AnimMan_AITearcher
+MRUItem1=/Game/Waveli/Weapon/BP_Pistol_Bullet
+MRUItem2=/Game/Waveli/Weapon/BP_Canon_Bullet
+MRUItem3=/Game/Waveli/Weapon/BP_Rifle_Bullet
+MRUItem4=/Game/Waveli/Character/BP_ALS_AnimMan_Shooter
+MRUItem5=/Game/Waveli/Map/Classroom_V1
+MRUItem6=/Game/Waveli/Weapon/BP_BaseWeapon
+MRUItem7=/Game/Waveli/Weapon/BP_PickUp_HPPack
+MRUItem8=/Game/AdvancedLocomotionV4/Blueprints/CharacterLogic/ALS_Base_CharacterBP
+MRUItem9=/Game/AdvancedLocomotionV4/Blueprints/CharacterLogic/ALS_AnimMan_CharacterBP
+MRUItem10=/Game/Waveli/Weapon/BP_NerfCanon
+MRUItem11=/Game/Waveli/Weapon/BP_NerfRifle
+MRUItem12=/Game/Waveli/AI/SBT_MoveToWeapon
+MRUItem13=/Game/Waveli/AI/SBT_JumpShot
+MRUItem14=/Game/Waveli/AI/BTT_MoveToObject
+MRUItem15=/Game/Waveli/AI/SBT_MoveShot
+MRUItem16=/Game/Waveli/AI/SBT_MoveToHP
+MRUItem17=/Game/Waveli/AI/SBT_MoveToBullet
+MRUItem18=/Game/Waveli/AI/BTS_UpdateInfo
+MRUItem19=/Game/Waveli/AI/SBT_Move
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -2333,6 +2327,59 @@ Classroom_V1_C.Tick=True
 Classroom_V1_C.Replication=True
 Classroom_V1_C.Actor=True
 Classroom_V1_C.Input=True
+BP_ALS_AnimMan_AITearcher_C.Tick=True
+BP_ALS_AnimMan_AITearcher_C.Default=True
+BP_ALS_AnimMan_AITearcher_C.Colors=True
+BP_ALS_AnimMan_AITearcher_C.Mantle Animations=True
+BP_ALS_AnimMan_AITearcher_C.Roll Animations=True
+BP_ALS_AnimMan_AITearcher_C.GetUpAnimations=True
+BP_ALS_AnimMan_AITearcher_C.State Values=True
+BP_ALS_AnimMan_AITearcher_C.Input=True
+BP_ALS_AnimMan_AITearcher_C.Movement System=True
+BP_ALS_AnimMan_AITearcher_C.Mantle System=True
+BP_ALS_AnimMan_AITearcher_C.References=True
+BP_ALS_AnimMan_AITearcher_C.Ragdoll System=True
+BP_ALS_AnimMan_AITearcher_C.Camera System=True
+BP_ALS_AnimMan_AITearcher_C.Character=True
+BP_ALS_AnimMan_AITearcher_C.Camera=True
+BP_ALS_AnimMan_AITearcher_C.Pawn=True
+BP_ALS_AnimMan_AITearcher_C.Replication=True
+BP_ALS_AnimMan_AITearcher_C.Rendering=True
+BP_ALS_AnimMan_AITearcher_C.Collision=True
+BP_ALS_AnimMan_AITearcher_C.Actor=True
+BP_ALS_AnimMan_AITearcher_C.TransformCommon=True
+BP_ALS_AnimMan_AITearcher_C.Animation=True
+BP_ALS_AnimMan_AITearcher_C.Mesh=True
+BP_ALS_AnimMan_AITearcher_C.Physics=True
+BP_ALS_AnimMan_AITearcher_C.Lighting=True
+BP_ALS_AnimMan_AITearcher_C.Clothing=True
+BP_ALS_AnimMan_AITearcher_C.MasterPoseComponent=True
+BP_ALS_AnimMan_AITearcher_C.ClothingSimulation=True
+BP_ALS_AnimMan_AITearcher_C.SkinWeights=True
+BP_ALS_AnimMan_AITearcher_C.Navigation=True
+BP_ALS_AnimMan_AITearcher_C.VirtualTexture=True
+BP_ALS_AnimMan_AITearcher_C.Tags=True
+BP_ALS_AnimMan_AITearcher_C.Activation=True
+BP_ALS_AnimMan_AITearcher_C.Cooking=True
+BP_ALS_AnimMan_AITearcher_C.Character Movement (General Settings)=True
+BP_ALS_AnimMan_AITearcher_C.Character Movement: Walking=True
+BP_ALS_AnimMan_AITearcher_C.Character Movement: Jumping / Falling=True
+BP_ALS_AnimMan_AITearcher_C.Character Movement (Networking)=True
+BP_ALS_AnimMan_AITearcher_C.Character Movement: Swimming=True
+BP_ALS_AnimMan_AITearcher_C.Character Movement: Flying=True
+BP_ALS_AnimMan_AITearcher_C.Character Movement: Custom Movement=True
+BP_ALS_AnimMan_AITearcher_C.Character Movement (Rotation Settings)=True
+BP_ALS_AnimMan_AITearcher_C.Character Movement: Physics Interaction=True
+BP_ALS_AnimMan_AITearcher_C.Character Movement=True
+BP_ALS_AnimMan_AITearcher_C.Character Movement: Avoidance=True
+BP_ALS_AnimMan_AITearcher_C.RootMotion=True
+BP_ALS_AnimMan_AITearcher_C.Character Movement: NavMesh Movement=True
+BP_ALS_AnimMan_AITearcher_C.NavMovement=True
+BP_ALS_AnimMan_AITearcher_C.Velocity=True
+BP_ALS_AnimMan_AITearcher_C.PlanarMovement=True
+BP_ALS_AnimMan_AITearcher_C.MovementComponent=True
+BP_ALS_AnimMan_AITearcher_C.Shape=True
+BP_ALS_AnimMan_AITearcher_C.Materials=True
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -2347,6 +2394,7 @@ InstalledPlugins=NodeGraphAssistant
 InstalledPlugins=XRVisualization
 
 [PlacementMode]
+RecentlyPlaced=/Game/Waveli/AI/BP_ALS_AnimMan_AITearcher.BP_ALS_AnimMan_AITearcher;
 RecentlyPlaced=/Game/Waveli/Weapon/BP_PickUp_HPPack.BP_PickUp_HPPack;
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Game/Waveli/AI/BP_ALS_AnimMan_AIShooter.BP_ALS_AnimMan_AIShooter;
@@ -2509,7 +2557,7 @@ MovementComponent=
 ActorComponent=
 CapsuleComponent=
 ShapeComponent=
-PrimitiveComponent="\"Object.Lighting.LightingChannels\" "
+PrimitiveComponent=
 SceneComponent=
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" "
 SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
