push holographic rotating effect

--- a/Demo/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Demo/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -145,7 +145,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/ChenMaterial
+ContentBrowserTab1.SelectedPaths=/Game/OldClassroom/Textures
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
@@ -177,15 +177,15 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/OldClassroom/Maps/Classroom
+LastLevel=/Game/ChenMaterial/Classroom_bugcheck
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=-1592.000 Y=149.000
+ScreenPosition=X=328.000 Y=84.000
 WindowSize=X=1286.000 Y=726.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -201,7 +201,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../GameJAM/GameJ/Demo/Content/OldClassroom/Maps
+UNR=../../../../../GameJAM/GameJ/Demo/Content/ChenMaterial
 BRUSH=../../../../../../DEMO/Demo/Content/
 FBX=../../../../../../DEMO/Demo/Content/
 FBXAnim=../../../../../../DEMO/Demo/Content/
@@ -1057,13 +1057,15 @@ Cascade.TimeStamp=2021.05.19-02.06.23
 Cascade.LastCompileMethod=Unknown
 DistCurveEditor.TimeStamp=2021.05.19-02.06.25
 DistCurveEditor.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2021.05.19-02.06.34
+StaticMeshEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/OldClassroom/Maps/Classroom
-MRUItem1=/Game/ChenMaterial/Classroom_chenVersion2
-MRUItem2=/Game/ChenMaterial/Classroom_chenVersion
-MRUItem3=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem4=/Game/ChenMaterial/Classroom_bugcheck
+MRUItem0=/Game/ChenMaterial/Classroom_bugcheck
+MRUItem1=/Game/OldClassroom/Maps/Classroom
+MRUItem2=/Game/ChenMaterial/Classroom_chenVersion2
+MRUItem3=/Game/ChenMaterial/Classroom_chenVersion
+MRUItem4=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 MRUItem5=/Game/Maps/Classroom002
 MRUItem6=/Game/Waveli/Map/Classroom_V1
 MRUItem7=/Game/AdvancedLocomotionV4/Levels/ALS_DemoLevel
@@ -1073,26 +1075,26 @@ MRUItem10=/Game/StarterContent/Maps/Advanced_Lighting
 MRUItem11=/Game/StarterContent/Maps/Minimal_Default
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ChenMaterial/Edge
-MRUItem1=/Game/OldClassroom/Maps/Classroom
-MRUItem2=/Game/ChenMaterial/Edge_Inst
-MRUItem3=/Game/ChenMaterial/pp_celshading
-MRUItem4=/Game/ChenMaterial/Edge_Clean
-MRUItem5=/Game/ChenMaterial/pp_celshading_Inst
-MRUItem6=/Game/ChenMaterial/range
-MRUItem7=/Game/ChenMaterial/ITEM_EFFECT
-MRUItem8=/Game/ChenMaterial/ITEM_EFFECT_Inst
-MRUItem9=/Game/OldClassroom/Materials/MI_WoodParquetHeight
-MRUItem10=/Game/ChenMaterial/Classroom_chenVersion2
-MRUItem11=/Game/ChenMaterial/Classroom_chenVersion
-MRUItem12=/Game/OldClassroom/Materials/M_Sky
-MRUItem13=/Game/ChenMaterial/Classroom_bugcheck
-MRUItem14=/Game/OldClassroom/MasterMaterials/M_TilingHeight
-MRUItem15=/Game/OldClassroom/Materials/M_Grass
-MRUItem16=/Game/Maps/Classroom002
-MRUItem17=/Game/ChenMaterial/BP_VA
-MRUItem18=/Game/OldClassroom/StarterContent/Particles/P_Ambient_Dust
-MRUItem19=/Game/OldClassroom/StarterContent/Particles/Materials/M_Dust_Particle
+MRUItem0=/Game/OldClassroom/Materials/MI_TeacherDesk
+MRUItem1=/Game/OldClassroom/Meshes/SM_teacherDesk
+MRUItem2=/Game/ChenMaterial/rotatingHolograph_2
+MRUItem3=/Game/ChenMaterial/ITEM_EFFECT
+MRUItem4=/Game/ChenMaterial/hologram_Inst_2
+MRUItem5=/Game/ChenMaterial/hologram_Inst
+MRUItem6=/Game/ChenMaterial/NewMaterial
+MRUItem7=/Game/ChenMaterial/Classroom_bugcheck
+MRUItem8=/Game/OldClassroom/Materials/MI_WoodParquetHeight
+MRUItem9=/Game/ChenMaterial/Edge
+MRUItem10=/Game/OldClassroom/Maps/Classroom
+MRUItem11=/Game/ChenMaterial/Edge_Inst
+MRUItem12=/Game/ChenMaterial/pp_celshading
+MRUItem13=/Game/ChenMaterial/Edge_Clean
+MRUItem14=/Game/ChenMaterial/pp_celshading_Inst
+MRUItem15=/Game/ChenMaterial/range
+MRUItem16=/Game/ChenMaterial/ITEM_EFFECT_Inst
+MRUItem17=/Game/ChenMaterial/Classroom_chenVersion2
+MRUItem18=/Game/ChenMaterial/Classroom_chenVersion
+MRUItem19=/Game/OldClassroom/Materials/M_Sky
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -2456,6 +2458,23 @@ MaterialExpressionPower.MaterialExpressionPower=True
 MaterialExpressionPower.MaterialExpression=True
 MaterialExpressionConstant.MaterialExpressionConstant=True
 MaterialExpressionConstant.MaterialExpression=True
+MaterialExpressionTextureSampleParameter2D.General=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpression=True
+MaterialExpressionTextureSampleParameter2D.ParameterCustomization=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureBase=True
+MaterialExpressionFresnel.MaterialExpressionFresnel=True
+MaterialExpressionFresnel.MaterialExpression=True
+MaterialExpressionPanner.MaterialExpressionPanner=True
+MaterialExpressionPanner.MaterialExpression=True
+MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
+MaterialExpressionTextureCoordinate.MaterialExpression=True
+MaterialExpressionScreenPosition.MaterialExpression=True
+MaterialExpressionCameraVectorWS.MaterialExpression=True
+MaterialExpressionComment.MaterialExpressionComment=True
+MaterialExpressionComment.MaterialExpression=True
+MaterialExpressionTextureObject.MaterialExpressionTextureBase=True
+MaterialExpressionTextureObject.MaterialExpression=True
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -2471,9 +2490,14 @@ InstalledPlugins=NodeGraphAssistant
 InstalledPlugins=XRVisualization
 
 [PlacementMode]
+RecentlyPlaced=/Game/ChenMaterial/rotatingHolograph_2.rotatingHolograph_2;
+RecentlyPlaced=/Game/ChenMaterial/hologram_Inst_2.hologram_Inst_2;
+RecentlyPlaced=/Game/ChenMaterial/hologram_Inst.hologram_Inst;
+RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/ChenMaterial/hologram.hologram;
 RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_17
 RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/ChenMaterial/ITEM_EFFECT.ITEM_EFFECT;
+RecentlyPlaced=/Game/ChenMaterial/rotatingHolograph.rotatingHolograph;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/OldClassroom/Materials/M_SimpleWhite.M_SimpleWhite;
 RecentlyPlaced=/Game/OldClassroom/Materials/MI_Chair.MI_Chair;
@@ -2486,17 +2510,9 @@ RecentlyPlaced=/Game/Waveli/Weapon/BP_NerfCanon.BP_NerfCanon;
 RecentlyPlaced=/Game/Waveli/Weapon/BP_Canon_Bullet.BP_Canon_Bullet;
 RecentlyPlaced=/Game/Waveli/Weapon/BP_NerfRifle.BP_NerfRifle;
 RecentlyPlaced=/Game/Waveli/Weapon/BP_NerfPistol.BP_NerfPistol;
-RecentlyPlaced=/Game/Waveli/Weapon/BP_PickUp_Bullet.BP_PickUp_Bullet;
-RecentlyPlaced=/Game/Waveli/Weapon/BP_Pistol_Bullet.BP_Pistol_Bullet;
-RecentlyPlaced=/Game/Waveli/Weapon/BP_BaseWeapon.BP_BaseWeapon;
-RecentlyPlaced=/Game/Waveli/Weapon/BP_Weapon_NerfRifle.BP_Weapon_NerfRifle;
-RecentlyPlaced=/Game/Waveli/Weapon/BP_Weapon_NerfPistol.BP_Weapon_NerfPistol;
-RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
-RecentlyPlaced=/Game/Waveli/Character/BP_AnimMan_Character_Mini.BP_AnimMan_Character_Mini;
-RecentlyPlaced=/Game/OldClassroom/Meshes/SM_teacherDesk.SM_teacherDesk;
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=LoadErrors
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
@@ -2530,6 +2546,11 @@ LastLogListing=MapCheck
 /Game/ChenMaterial/Edge_Clean.Edge_Clean=1
 /Game/ChenMaterial/Edge.Edge=1
 /Game/ChenMaterial/Edge_Inst.Edge_Inst=1
+/Game/OldClassroom/Materials/MI_TeacherDesk.MI_TeacherDesk=1
+/Game/ChenMaterial/hologram.hologram=1
+/Game/ChenMaterial/hologram_Inst.hologram_Inst=1
+/Game/ChenMaterial/rotatingHolograph.rotatingHolograph=1
+/Game/ChenMaterial/rotatingandfloating.rotatingandfloating=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2798,7 +2819,7 @@ BP_PickUp_HP_C=CapsuleComponent.Physics.ConstraintsGroup,
 BP_PickUp_Bullet_C=
 BP_PickUp_HPPack_C=CapsuleComponent.Physics.ConstraintsGroup,
 UserConstructionScript=CapsuleComponent.Physics.ConstraintsGroup,
-MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.BaseColor,MaterialEditorInstanceConstant.ParameterGroups.Dirt,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Height,MaterialEditorInstanceConstant.ParameterGroups.Normal,MaterialEditorInstanceConstant.ParameterGroups.Roughness,MaterialEditorInstanceConstant.ParameterGroups.Textures,MaterialEditorInstanceConstant.ParameterGroups.UV,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.BaseColor,MaterialEditorInstanceConstant.ParameterGroups.Dirt,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Height,MaterialEditorInstanceConstant.ParameterGroups.Normal,MaterialEditorInstanceConstant.ParameterGroups.Roughness,MaterialEditorInstanceConstant.ParameterGroups.Textures,MaterialEditorInstanceConstant.ParameterGroups.UV,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,
 MaterialInstanceConstant=
 
 [/Script/UnrealEd.PersonaOptions]
@@ -3011,7 +3032,7 @@ bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
 
 [MaterialInstanceEditor]
-bShowGrid=False
+bShowGrid=True
 bDrawGrid=False
 PrimType=1
 
