--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-Demo/Content/Maps/Classroom_chenVersion_BuiltData.uasset. filter=lfs diff=lfs merge=lfs -text
+.xyz filter=lfs diff=lfs merge=lfs -text
 Demo/Content/Maps/Classroom_chenVersion_BuiltData.uasset filter=lfs diff=lfs merge=lfs -text
+Demo/Content/Maps/Classroom_chenVersion_BuiltData.uasset. filter=lfs diff=lfs merge=lfs -text
