--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 .xyz filter=lfs diff=lfs merge=lfs -text
 Demo/Content/Maps/Classroom_chenVersion_BuiltData.uasset filter=lfs diff=lfs merge=lfs -text
+.uasset filter=lfs diff=lfs merge=lfs -text
 Demo/Content/Maps/Classroom_chenVersion_BuiltData.uasset. filter=lfs diff=lfs merge=lfs -text
