--- a/Demo/Config/DefaultEngine.ini
+++ b/Demo/Config/DefaultEngine.ini
@@ -2,13 +2,13 @@
 GameName=Demo
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Waveli/Map/Classroom_V1.Classroom_V1
-GameDefaultMap=/Game/Waveli/Map/Classroom_V1.Classroom_V1
+EditorStartupMap=/Game/Maps/Classroom_chenVersion.Classroom_chenVersion
+GameDefaultMap=/Game/Maps/Classroom_chenVersion.Classroom_chenVersion
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
+GlobalDefaultGameMode=/Game/Waveli/GameMode/GameMode_GameJam_TPS.GameMode_GameJam_TPS_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
